<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/logFragment"
        android:enabled="true"
        android:icon="@drawable/log_icon_24"
        android:title="@string/LogMenuText" />

    <item
        android:id="@+id/statsFragment"
        android:enabled="true"
        android:icon="@drawable/stats_icon_24"
        android:title="@string/StatsMenuText" />

    <item
        android:id="@+id/timerFragment"
        android:enabled="true"
        android:icon="@drawable/timer_icon_24"
        android:title="@string/TimerMenuText" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/profile_icon_24"
        android:title="@string/ProfileMenuText" />
</menu>