<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.EditWorkoutFragment">

    <data>

        <variable
            name="date"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EditWorkout"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@{date}"
                android:textColor="@color/gray"
                android:textSize="20sp"
                tools:text="@string/DefaultDate" />

            <ImageButton
                android:id="@+id/pickDateButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:contentDescription="@string/PickDateCD"
                android:padding="8dp"
                android:src="@drawable/edit_calendar_icon_24" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ExerciseList"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:listitem="@layout/exercise_card" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddNewExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/AddNewExercise" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/Ok" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/Cancel" />

        </LinearLayout>
    </LinearLayout>
</layout>