<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.TimerFragment">

    <data>

        <variable
            name="time"
            type="String" />

        <variable
            name="pause_resume"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Start countdown/stopwatch buttons-->
        <LinearLayout
            android:id="@+id/startLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/countDownButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:text="@string/StartCountdown"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/countUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/StartStopwatch"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Layout for timer and timer buttons-->
        <LinearLayout
            android:id="@+id/timerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <!--Put timer and timer text here-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <!--Countdown progress bar-->
                <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                    android:id="@+id/countDown"
                    style="@style/Widget.MaterialProgressBar.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150dp"
                    android:minHeight="150dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/timeView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{time}"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:text="@string/TimerText" />
            </LinearLayout>

            <!--Buttons for stop/pause/restart-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/stopButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Stop"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pauseButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{pause_resume}"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/restartButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Restart"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>