<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ProfileFragment">

    <data>

        <variable
            name="uri"
            type="android.net.Uri" />

        <variable
            name="name"
            type="String" />

        <variable
            name="description"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/round_outline"
            android:contentDescription="@string/ProfilePictureCD"
            android:src="@{uri}"
            tools:src="@drawable/placeholder_image" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@{name}"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Oskar Wiiala" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="75dp"
            android:paddingEnd="75dp">

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="25dp"
                android:text="@string/About"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{description}"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="I like to lift weights and stuff" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Edit"
            app:icon="@drawable/edit_icon_24" />
    </LinearLayout>

</layout>