<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="date"
            type="String" />

        <variable
            name="exercisePreview1"
            type="String" />

        <variable
            name="exercisePreview2"
            type="String" />

        <variable
            name="exercisePreview3"
            type="String" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/workoutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:strokeColor="@color/primary"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/workoutDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{date}"
                    android:textStyle="bold"
                    tools:text="@string/WorkoutDate" />

                <TextView
                    android:id="@+id/exercise1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{exercisePreview1}"
                    tools:text="Bench: 6, 5, 4 100 kg 3mr" />

                <TextView
                    android:id="@+id/exercise2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{exercisePreview2}"
                    tools:text="Pull up: 12, 10, 8 3mr" />

                <TextView
                    android:id="@+id/exercise3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{exercisePreview3}"
                    tools:text="Squat: 3x5 150 kg 3mr" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/deleteWorkoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@string/DeleteWorkoutCD"
                    android:padding="8dp"
                    android:src="@drawable/delete_icon_24" />

                <ImageButton
                    android:id="@+id/editWorkoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@string/EditWorkoutCD"
                    android:padding="8dp"
                    android:src="@drawable/edit_icon_24" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
